fix some things, strip whitespaces, css

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -173,6 +173,7 @@ input {
   color: #8a97a0;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
   margin-bottom: 30px;
+  border-radius: 5px;
 }
 button {
 /*  padding: 19px 39px 18px 39px;*/  
